--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
 body {
   background-color: lightgray;
 }
+output {
+  display: block;
+  border: 2.75px solid black;
+  width: 90vw;
+  height: 2em;
+  background-color: white;
+}
